--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -34,3 +34,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   jaffle_shop:
     +materialized: table # Config indicated by + and applies to all files under models/example/
+    staging:
+      +materialized: view
